# randflow

./: .gitignore  README.md  example.py  example_NSRFG.py  pyproject.toml
src/randflow/: __init__.py  generator.py  point.py  spectrum.py
testing/: test.ipynb  test2.py
