[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "randflow"
version = "0.0.1"
authors = [
  { name="Sun Jianping", email="sunjianping@zju.edu.cn" },
]
description = "A random flow generator for large eddy simulation of atmosphere boundary layer."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sunjp704/randflow"
"Bug Tracker" = "https://github.com/sunjp704/randflow/issues"